Fix bug #52238: Crash when an Exception occured in iterator_to_array